more unit tests